[package]
name = "themis"
version = "1.2.0"
authors = ["PurpleMyst <PurpleMyst@users.noreply.github.com>"]
license = "GPL-3.0-only"
edition = "2018"

[dependencies]
image = "0.24.2"
rayon = "1.5.3"
indicatif = { version = "0.16.2", features = ["rayon", "improved_unicode"] }
structopt = "0.3.26"
eyre = "0.6.8"

[features]
